# smite-chatbot

./: .gitignore  CLAUDE.md  README.md  VECTOR_DB_RECOVERY.md  gods_abilities.json  main.py  pyproject.toml  requirements.txt  smite_gods.csv  smite_gods.json  test_storage.py
data/scrape-20250819_045743Z/: gods.json  items.json  manifest.json  patch_details.json  patch_index.json
data/scrape-20250819_074118Z/: gods.json  items.json  manifest.json  patch_details.json  patch_index.json
data/scrape-20250819_074118Z/processed/: DOCUMENT_ENHANCEMENTS_TODO.md  abilities_processed.json  all_documents.json  god_changes_processed.json  gods_and_abilities_processed.json  gods_processed.json  items_processed.json  patches_processed.json
data/scrape-20250819_074118Z/processed_enhanced/: abilities_processed.json  all_documents.json  gods_and_abilities_processed.json  gods_processed.json  patches_and_changes_processed.json
embeddings/: embedder.py
examples/: chatbot_example.py
scraper/: ability_scraper.py  gods.py  ollama_wrapper.py  scraper_prompt.txt
src/smite_chatbot/api/: app.py  main.py  models.py
src/smite_chatbot/app/: main.py  streamlit_app.py
src/smite_chatbot/models/: __init__.py  chatbot.py  data_classes.py  llm_wrapper.py  openai_chatbot.py
src/smite_chatbot/processors/: base.py  gods.py  items.py  orchestrator.py  patches.py  test_processors.py
src/smite_chatbot/scraper/: ability_scraper.py  base.py  gods_detailed.py  items.py  orchestrator.py  patch_detail.py  patch_index.py  patch_notes.py
storage/: documents.db
tests/: test_chatbot.py
(+5 files in other folders)
